--- a/Polevpn.app/Contents/Info.plist
+++ b/Polevpn.app/Contents/Info.plist
@@ -1,8 +1,8 @@
-	<key>NSHighResolutionCapable</key>
-	<string>True</string>
-	<key>LSUIElement</key>
-	<string>1</string>
-	<key>CFBundleIconFile</key>                
-	<string>polevpn.icns</string>
-	<key>NSPrincipalClass</key>
-	<string>NSApplication</string>
+<key>NSHighResolutionCapable</key>
+<string>True</string>
+<key>LSUIElement</key>
+<string>1</string>
+<key>CFBundleIconFile</key>                
+<string>Polevpn.icns</string>
+<key>NSPrincipalClass</key>
+<string>NSApplication</string>
