--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,8 +12,14 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.16.x
-      - name: build linux
+      - name: Build Linux
         run: ./build_linux.sh
+      - name: Upload Zip
+        uses: actions/upload-artifact@v1
+        with:
+          name: app
+          path: build/linux/PoleVPN.zip
+
 
   build-macos:
     runs-on: macos-latest
@@ -23,5 +29,5 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.16.x
-      - name: Build macos
+      - name: Build Macos
         run: ./build_macos.sh
