--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Upload Zip
         uses: actions/upload-artifact@v1
         with:
-          name: app
+          name: PoleVPN-linux.zip
           path: build/linux/PoleVPN.zip
 
 
@@ -31,3 +31,8 @@ jobs:
           go-version: 1.16.x
       - name: Build Macos
         run: ./build_macos.sh
+      - name: Upload Zip
+        uses: actions/upload-artifact@v1
+        with:
+          name: PoleVPN-macos.zip
+          path: build/linux/PoleVPN.zip
