--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: PoleVPN-macos.zip
-          path: build/linux/PoleVPN.zip
+          path: build/macos/PoleVPN.zip
